// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo find Handle fulltext search result 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "value0": "fulltextSearchQuery",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@value0)
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find Should aggregate sorts 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": {
        "query": "sortQueryPart",
      },
      "value2": {
        "query": "sortQueryPart",
      },
      "value3": "test_lib",
    },
    "query": "FOR r IN (@@value0)
SORT 
@value1, @value2
FILTER r.active == true
RETURN MERGE(r, {library: @value3})",
  },
  "withTotalCount": undefined,
}
`;

exports[`RecordRepo find Should find records 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)
SORT TO_NUMBER(r._key) DESC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)

FILTER (
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
AND
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
)
SORT TO_NUMBER(r._key) DESC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo updateRecord Should update a record 1`] = `
"
                    UPDATE @value0 WITH @value1 IN @@value2
                    RETURN {old: OLD, new: NEW}
                "
`;

exports[`RecordRepo updateRecord Should update a record 2`] = `
{
  "@value2": "test",
  "value0": {
    "_id": "test/222435651",
    "_key": "222435651",
  },
  "value1": {
    "modified_at": 1519303348,
  },
}
`;
